# runtime2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py
configs/: runtime2_restricted_live.toml  runtime2_restricted_live_testnet.toml
docs/: architecture_overview.md  backtest_runtime_parity.md  binance_change_compliance_audit.md  binance_cutover_readiness.md  binance_known_gaps.md  binance_signed_path_verification_plan.md  binance_signed_path_verification_results.md  cutover_checklist.md  data_contracts.md  debugging_playbook.md  exchange_integration_notes.md  execution_report_tolerance_note.md  micro_live_to_runtime2_inheritance_audit.md  operator_runbook.md  phase1_scope.md  post_4_to_9_readiness_assessment.md  production_gate_pre_audit.md  release_gate_checklist.md  release_readiness_checklist.md  restricted_live_readiness.md  runtime2_account_snapshot_bootstrap.md  runtime2_account_update_rehearsal_plan.md  runtime2_active_event_rehearsal_flow.md  runtime2_active_private_event_exercise_plan.md  runtime2_artifact_sync.md  runtime2_bounded_scoreboard.md  runtime2_broader_rehearsal_stage_plan.md  runtime2_current_status.md  runtime2_dev_ops_split_checklist.md  runtime2_dev_ops_split_plan.md  runtime2_event_exercise_harness_usage.md  runtime2_execution_model.md  runtime2_gate_schema.md  runtime2_next_steps.md  runtime2_operating_pc_checklist.md  runtime2_operator_decision_template.md  runtime2_operator_runbook.md  runtime2_operator_stage_summary.md  runtime2_pre_run_checklist.md  runtime2_production_rehearsal_gate.md  (+14 more)
scripts/: __init__.py  (+25 more)
(+147 files in other folders)
